--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ marker-pdf==1.3.5
 docling==2.20.0
 pymupdf4llm==0.0.17
 fitz
+paddlepaddle
+alibabacloud_tea_openapi
+alibabacloud_docmind_api20220711==1.4.7
+
+tencentcloud-sdk-python-common  
+tencentcloud-sdk-python-lkeap
