--- a/.env example
+++ b/.env example
@@ -13,3 +13,11 @@ DOC2X_API_KEY=
 
 #light pdf
 LIGHT_API_KEY=
+
+# alibaba
+ALIBABA_CLOUD_ACCESS_KEY_ID=
+ALIBABA_CLOUD_ACCESS_KEY_SECRET=
+
+# tencent
+TENCENTCLOUD_SECRET_ID=
+TENCENTCLOUD_SECRET_KEY=
