--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+mistralai
+
 marker-pdf==1.3.5
+
 docling==2.20.0
+
 pymupdf4llm==0.0.17
+
 fitz
+
+openai
+
 paddlepaddle
+
 alibabacloud_tea_openapi
 alibabacloud_docmind_api20220711==1.4.7
 
